syntax="proto3";
package greet;

option go_package="grpc_tutorial/greet/proto";

message GreetRequest {
    string first_name = 1;
}
message GreetResponse {
    string result = 1;
}

message CalculatorRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message CalculatorResponse {
    int32 result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    rpc HalloThere(GreetRequest) returns (GreetResponse) {};
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse){};
    rpc LongGreet(stream GreetRequest) returns (GreetResponse){};
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse){};
}

service CalculatorService {
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
}